# OOP_lab6

./: README.md
tasks/lab3/: main.cpp
tasks/lab4/: CMakeLists.txt  main.cpp
tasks/lab4/include/: Array.h  Figure.h  Point.h  Rectangle.h  Rhombus.h  Trapezoid.h
tasks/lab4/tests/: test_templates.cpp
